[gd_scene load_steps=24 format=3 uid="uid://lmdkqsrww7lr"]

[ext_resource type="Script" path="res://main_menu/online/online_menu.gd" id="1_6se6n"]
[ext_resource type="FontFile" uid="uid://dujxw7jilwnxa" path="res://assets/fonts/NotJamScrawl12.ttf" id="2_o2x25"]
[ext_resource type="FontFile" uid="uid://bpr437vu657" path="res://assets/fonts/NotJamScrawl9.ttf" id="3_p1idk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3oyjb"]
bg_color = Color(0, 0, 0, 0.752941)
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fki6g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3erx8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7bona"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fteki"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8y01f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x5kia"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lg0nh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4io6c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vrceh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_chx78"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bd26f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rnl1f"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.890196, 0.784314, 0.207843, 0.25098)
border_width_bottom = 2
border_color = Color(0.890366, 0.785107, 0.207156, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ppbpp"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_color = Color(0.501961, 0.501961, 0.501961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fqpgy"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
draw_center = false
border_width_bottom = 2
border_color = Color(0.890366, 0.785107, 0.207156, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3784y"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_color = Color(0.890366, 0.785107, 0.207156, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iu6dq"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
draw_center = false
border_width_top = 2
border_color = Color(0.890366, 0.785107, 0.207156, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5uue"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_color = Color(0.890196, 0.784314, 0.207843, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2sdxj"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
draw_center = false
border_color = Color(0.890366, 0.785107, 0.207156, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgkx6"]
content_margin_top = 4.0
content_margin_bottom = 4.0
draw_center = false

[node name="OnlineMenu" type="PanelContainer" node_paths=PackedStringArray("back_butt", "username_input", "connect_status", "endless_all_holders", "endless_weekly_holders")]
custom_minimum_size = Vector2(256, 256)
theme_override_styles/panel = SubResource("StyleBoxFlat_3oyjb")
script = ExtResource("1_6se6n")
back_butt = NodePath("MarginContainer/VBoxContainer/HBoxContainer/back")
username_input = NodePath("MarginContainer/VBoxContainer/HBoxContainer/Username")
connect_status = NodePath("MarginContainer/VBoxContainer/HBoxContainer/Connected")
endless_all_holders = NodePath("MarginContainer/VBoxContainer/TabContainer/Endless/TabContainer/All/ScrollContainer/VBoxContainer")
endless_weekly_holders = NodePath("MarginContainer/VBoxContainer/TabContainer/Endless/TabContainer/Weekly/ScrollContainer/VBoxContainer")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="back" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.890366, 0.785107, 0.207156, 1)
theme_override_fonts/font = ExtResource("2_o2x25")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_fki6g")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_3erx8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7bona")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_fteki")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_8y01f")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_x5kia")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lg0nh")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4io6c")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vrceh")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_chx78")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bd26f")
text = "BACK"

[node name="Connected" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("3_p1idk")
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[color=gray]SIGNED OUT :("
fit_content = true
autowrap_mode = 0

[node name="Username" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_placeholder_color = Color(0.890196, 0.784314, 0.207843, 0.501961)
theme_override_colors/font_uneditable_color = Color(0.890366, 0.785107, 0.207156, 1)
theme_override_fonts/font = ExtResource("3_p1idk")
theme_override_font_sizes/font_size = 9
theme_override_styles/focus = SubResource("StyleBoxFlat_rnl1f")
theme_override_styles/read_only = SubResource("StyleBoxFlat_ppbpp")
theme_override_styles/normal = SubResource("StyleBoxFlat_fqpgy")
placeholder_text = "USERNAME"
alignment = 1
max_length = 10
expand_to_text_length = true
context_menu_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
caret_blink = true

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_unselected_color = Color(0.890366, 0.785107, 0.207156, 1)
theme_override_colors/font_hovered_color = Color(0.890366, 0.785107, 0.207156, 1)
theme_override_colors/font_selected_color = Color(0.890366, 0.785107, 0.207156, 1)
theme_override_fonts/font = ExtResource("3_p1idk")
theme_override_font_sizes/font_size = 9
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_3784y")
theme_override_styles/panel = SubResource("StyleBoxFlat_iu6dq")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_3784y")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_x5uue")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_2sdxj")
tab_alignment = 1
current_tab = 0

[node name="Endless" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8
metadata/_tab_index = 0

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/TabContainer/Endless"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_unselected_color = Color(0.890366, 0.785107, 0.207156, 1)
theme_override_colors/font_hovered_color = Color(0.890366, 0.785107, 0.207156, 1)
theme_override_colors/font_selected_color = Color(0.890366, 0.785107, 0.207156, 1)
theme_override_fonts/font = ExtResource("3_p1idk")
theme_override_font_sizes/font_size = 9
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_3784y")
theme_override_styles/panel = SubResource("StyleBoxFlat_iu6dq")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_3784y")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_x5uue")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_2sdxj")
tab_alignment = 1
current_tab = 0

[node name="All" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Endless/TabContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Endless/TabContainer/All"]
custom_minimum_size = Vector2(128, 96)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rgkx6")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Endless/TabContainer/All/ScrollContainer"]
layout_mode = 2

[node name="Weekly" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Endless/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 16
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Endless/TabContainer/Weekly"]
custom_minimum_size = Vector2(128, 96)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rgkx6")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Endless/TabContainer/Weekly/ScrollContainer"]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/HBoxContainer/Username" to="." method="_on_username_focus_entered"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/Username" to="." method="_on_username_text_changed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/HBoxContainer/Username" to="." method="_on_username_text_submitted"]
